fix layout issues

--- a/openmetadata-ui/src/main/resources/ui/src/components/AppContainer/app-container.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/AppContainer/app-container.less
@@ -17,6 +17,7 @@
   height: 100vh;
 
   &.extra-banner {
+    // Remove the height of the banner
     height: calc(100vh - 64px);
   }
 
@@ -49,9 +50,5 @@
       background-color: @white;
       padding-bottom: @padding-lg;
     }
-  }
-  .main-content .my-data-page {
-    min-width: 900px;
-    overflow-x: auto;
   }
 }
