--- a/openmetadata-ui/src/main/resources/ui/src/pages/PageNotFound/page-not-found.less
+++ b/openmetadata-ui/src/main/resources/ui/src/pages/PageNotFound/page-not-found.less
@@ -15,7 +15,7 @@
 
 .page-not-found-container {
   position: relative;
-  height: calc(100vh - 64px);
+  height: 100vh;
 
   .not-found-text-image {
     position: absolute;
