--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -563,7 +563,7 @@ a[href].link-text-grey,
 }
 
 .full-height {
-  height: calc(100vh - 64px); // removing only navbar height
+  height: calc(100vh - @om-navbar-height); // removing only navbar height
 }
 
 .tab-content-height {
