--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/entity-version-time-line.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/entity-version-time-line.less
@@ -15,7 +15,7 @@
 
 .versions-list-container {
   position: fixed;
-  top: 64px;
+  top: @om-navbar-height;
 
   .ant-drawer-content-wrapper {
     box-shadow: none;
